--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
     "@typescript-eslint/no-unnecessary-type-assertion": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/no-base-to-string": "off",
-    "@typescript-eslint/prefer-ts-expect-error": "off"
+    "@typescript-eslint/prefer-ts-expect-error": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/ban-types": "off"
   }
 }
